<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lengthLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lengthString"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/length" >
        </EditText>

        <Button
            android:id="@+id/generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onGenerateButtonClicked"
            android:text="@string/generateString" />

        <TextView
            android:id="@+id/passwordResultLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordResultLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <MultiAutoCompleteTextView
            android:id="@+id/passwordResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/keywordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keywordLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <AutoCompleteTextView
            android:id="@+id/keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keyword" />

    </LinearLayout>

</ScrollView>